# Chefly

./: .gitignore  README.md  main.py  pyproject.toml
api/: __init__.py  config.py
api/auth/: dependencies.py  routes.py  schemas.py  service.py  utils.py
api/comments/: routes.py  schemas.py  service.py
api/db/: main.py  models.py  redis.py
api/follows/: routes.py  service.py
api/posts/: algorithm.py  routes.py  schemas.py  service.py
api/votes/: routes.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: ac6796f1136a_added_follows_table_and_user_.py  c61fcabda9a4_initial_migration.py
